# a-customized-wasm-sdk

./: .gitignore  README.md
cmake/: wasm32.cmake
include/: wasm_app_api.h
samples/say-hi/: CMakeLists.txt  main.c
